tests/expected_invalid_float_literal_range.diag.out
<input>:3:5: error: float literal '1e309' is outside the finite Float range
        1e309
        ^^^^^
